@@ -19,10 +19,11 @@
 import os
 import sys
 import cmd
-import TAT
 from io import StringIO
+import numpy as np
+import TAT
 from .utility import (mpi_rank, mpi_size, mpi_comm, write_to_file, read_from_file, show, showln, seed_differ,
-                      get_imported_function, seed_differ)
+                      get_imported_function, seed_differ, allgather_array)
 from . import conversion
 from .exact_state import ExactState
 from .simple_update_lattice import SimpleUpdateLattice
@@ -107,7 +108,7 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
         self.su = None
         self.ex = None
         self.gm = None
-        self.gm_conf = []
+        self.gm_conf = np.zeros(0, dtype=np.int64)
 
     def precmd(self, line):
         line = line.split("#")[0].strip()
@@ -492,7 +493,7 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
         name : str
             The file name.
         """
-        self.gm_conf = read_from_file(name)
+        self.gm_conf = read_from_file(name).copy()
 
     @AutoCmd.decorator
     def gm_conf_create(self, module_name, *args, **kwargs):
@@ -511,7 +512,7 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
             configuration = gm_Configuration(self.gm, -1)
             initial_configuration = get_imported_function(module_name, "initial_configuration")
             configuration = initial_configuration(configuration, *args, **kwargs)
-            self.gm_conf = mpi_comm.allgather(configuration.export_configuration())
+            self.gm_conf = allgather_array(configuration.export_configuration())
 
     @AutoCmd.decorator
     def gm_clear_symmetry(self):
